cgu summary 1st commit

--- a/cgu/index.html
+++ b/cgu/index.html
@@ -132,35 +132,75 @@
             Le présent document définit les conditions et modalités selon lesquelles l’Editeur met à la disposition de <strong class="text-strong-word">l'Utilisateur</strong> internaute les informations du site internet <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a>.<br/>
             L’utilisation du site internet est régie par le droit français.
         </p>
+        <h4 id="summary-title">Sommaire</h4>
+        <summary id="table-of-contents">
+            <ul>
+                <li>
+                    <a href="#informations-legales">INFORMATIONS LEGALES</a>
+                    <ul>
+                        <li><a href="#proprietaire-et-editeur">Propriétaire et Editeur du site</a></li>
+                        <li><a href="#directeur-de-la-publication">Directeur de la publication</a></li>
+                        <li><a href="#hebergeur-du-site">Hébergeur du site</a></li>
+                        <li><a href="#createur-du-site">Créateur du site</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#cgu">CONDITIONS GENERALES D’UTILISATION DU SITE</a>
+                    <ul>
+                        <li><a href="#propriete-intellectuelle">Propriété intellectuelle</a></li>
+                        <li><a href="#limitation-de-responsabilite">Limitation de responsabilité</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#rgpd">Politique de protection des données personnelles(«<abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>»)</a>
+                    <ul>
+                        <li><a href="#cookies">Cookies</a></li>
+                        <li><a href="#finalite-de-la-collecte-des-donnees">Finalité de la collecte des données personnelles</a></li>
+                        <li><a href="#partage-et-divulgation-des-donnees">Partage et divulgation des données</a></li>
+                        <li><a href="#mesures-de-securite">Mesures de sécurité</a></li>
+                        <li><a href="#delais-de-conservation-des-donnees">Les délais de conservation des données</a></li>
+                        <li><a href="#droits-des-utilisateurs-sur-les-donnees">Droits <strong class="text-strong-word">des Utilisateurs</strong> sur les données collectées</a></li>
+                        <li><a href="#cnil">La Commission Nationale de l’Informatique et des Libertés(«<abbr title="La Commission Nationale de l’Informatique et des Libertés" class="text-strong-word">CNIL</abbr>»)</a></li>
+                        <li><a href="#mise-a-jour-de-la-politique-de-donnees">Mise à jour de la politique de données personnelles</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#acces-au-site">Accès au site</a>
+                </li>
+                <li>
+                    <a href="#droit-applicable-et-juridiction-competente">Droit applicable et juridiction compétente</a>
+                </li>
+            </ul>
+        </summary>
     </header>
     <section id="informations-legales">
         <h2 class="text-small-header"><a href="#informations-legales"><span>INFORMATIONS LEGALES</span></a></h2>
-        <h3 class="text-card-title">Propriétaire et Editeur du site:</h3>
+        <h3 class="text-card-title" id="proprietaire-et-editeur">Propriétaire et Editeur du site:</h3>
         <p class="text-min-body">
             Société SAS <strong class="text-strong-word">Econ'home Energie</strong>  au capital de 5000 euros, immatriculée au <abbr title="Registre du Commerce et des Sociétés" class="text-strong-word">RCS</abbr> de Toulouse sous le numéro 881521454, dont le siège social est situé au 5 rue de la palanquette 31830 Plaisance-du-Touch.<br/>
             <strong class="text-strong-word">Numéro de téléphone</strong>: <a href="tel:+33532602342" class="text-hyperlink">0532602342</a><br/>
             <strong class="text-strong-word">Adresse e-mail</strong>: <a href="mailto:contact@meeco.fr" class="text-hyperlink">contact@meeco.fr</a><br/>
             <strong class="text-strong-word">Numéro de TVA intracommunautaire</strong>: FR248815214454
         </p>
-        <h3 class="text-card-title">Directeur de la publication:</h3>
+        <h3 class="text-card-title" id="directeur-de-la-publication">Directeur de la publication:</h3>
         <p class="text-min-body">Mr CEDRIC Pierre</p>
-        <h3 class="text-card-title">Hébergeur du site:</h3>
+        <h3 class="text-card-title" id="hebergeur-du-site">Hébergeur du site:</h3>
         <p class="text-min-body">L'hébergeur du site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a> est la société <strong class="text-strong-word">NET2COM LLC</strong>, dont le siège social est situé au 16192 Coastal Highway Lewes,DE 19958, avec le numéro de téléphone: <a href="tel:+13027039731" class="text-hyperlink">+1 (302) 703-9731</a>.</p>
-        <h3 class="text-card-title">Créateur du site:</h3>
+        <h3 class="text-card-title" id="createur-du-site">Créateur du site:</h3>
         <p class="text-min-body"><strong class="text-strong-word">Digital Vinci</strong>.<br/>
             Rue Henry Murger Casablanca.
         </p>
     </section>
     <section id="cgu">
         <h2 class="text-small-header"><a href="#cgu"><span>CONDITIONS GENERALES D’UTILISATION DU SITE</span></a></h2>
-        <h3 class="text-card-title">Propriété intellectuelle:</h3>
+        <h3 class="text-card-title" id="propriete-intellectuelle">Propriété intellectuelle:</h3>
         <p class="text-min-body">
             Conformément aux dispositions en vigueur de la loi française, l’intégralité de la structure et du contenu du site(logos, images, textes, articles, documents, vidéos, services, etc.) sont la propriété exclusive de l’Editeur ou de ses partenaires.<br/>
             Par ailleurs, la marque «<strong class="text-strong-word">Meeco</strong>» constitue une marque déposée, dont la reproduction ou l’utilisation à quelque titre que ce soit, même partielle, est strictement interdite.<br/>
             En conséquence, toute reproduction, représentation, modification, renvoi vers un autre site et/ou exploitation, totale ou partielle et à quelque titre que ce soit, sans l’accord écrit préalable du Directeur de la publication, est strictement interdite.<br/>
             L’Editeur se réserve le droit d’engager toutes procédures nécessaire, y compris judiciaires, pour faire cesser toute atteinte à ses droits de propriété intellectuelle et obtenir réparation du préjudice qui lui serait causé.            
         </p>
-        <h3 class="text-card-title">Limitation de responsabilité</h3>
+        <h3 class="text-card-title" id="limitation-de-responsabilite">Limitation de responsabilité</h3>
         <p class="text-min-body">
             Le site est susceptible de contenir des liens hypertexte vers d’autres sites internet(essentiellement des sites institutionnels). L’utilisation de ces liens entraîne une navigation externe au site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a>, sous la seule responsabilité de <strong class="text-strong-word">l'Utilisateur</strong>. La responsabilité de l’Editeur ne saurait être engagée à aucun titre que ce soit du fait de cette utilisation ainsi que du contenu de ses sites externes.<br/>
             L’Editeur se réserve la possibilité de modifier à tout moment et sans préavis la présentation, le contenu ainsi que les services et outils du site, afin notamment de mettre à jour les informations qu’il contient.<br/>
@@ -175,7 +215,7 @@
         <p class="text-min-body">
             La présente politique de confidentialité a pour objectif d’informer <strong class="text-strong-word">l'Utilisateur</strong> sur les modalités de traitement de ses données dans le respect de l’article 13 du Règlement Général européen sur la Protection des Données à caractère personnel n°2016/679 du 27 avril 2016(le «<abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>»).
         </p>
-        <h3 class="text-card-title">Cookies:</h3>
+        <h3 class="text-card-title" id="cookies">Cookies:</h3>
         <p class="text-min-body">
             <strong class="text-strong-word">L'Utilisateur</strong> est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.<br/>
             Les cookies sont de petits fichiers stockés temporairement sur le disque dur de l’ordinateur de <strong class="text-strong-word">l'Utilisateur</strong> par votre navigateur et qui sont nécessaires à l’utilisation du site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a>. Les cookies ne contiennent pas d’information personnelle et ne peuvent pas être utilisés pour identifier quelqu’un. Un cookie contient un identifiant unique, généré aléatoirement et donc anonyme. Certains cookies expirent à la fin de la visite de <strong class="text-strong-word">l'Utilisateur</strong>, d’autres restent.<br/>
@@ -185,12 +225,12 @@
             A défaut d’acceptation, <strong class="text-strong-word">l'Utilisateur</strong> est informé que certaines fonctionnalités ou pages risquent de lui être refusées.<br/>
             <strong class="text-strong-word">L'Utilisateur</strong> pourra désactiver ces cookies par l’intermédiaire des paramètres figurant au sein de son logiciel de navigation.
         </p>
-        <h3 class="text-card-title">Finalité de la collecte des données personnelles:</h3>
+        <h3 class="text-card-title" id="finalite-de-la-collecte-des-donnees">Finalité de la collecte des données personnelles:</h3>
         <p class="text-min-body">
             Le réseau <strong class="text-strong-word">Econ’home Energie</strong> peut être amené à recueillir les données à caractère personnel communiquées par <strong class="text-strong-word"><strong class="text-strong-word">les Utilisateurs</strong></strong> sur les formulaires de contacts, de demandes, ou lors de votre navigation sur le site. Ces données sont traitées afin de répondre aux demandes <strong class="text-strong-word">des Utilisateurs</strong> ou améliorer leur expérience sur le site.<br/>
             Le réseau <strong class="text-strong-word">Econ’home Energie</strong> est également susceptible d’utiliser les données à caractère personnel de <strong class="text-strong-word">ses Utilisateurs</strong> à des fins administratives.
         </p>
-        <h3 class="text-card-title">Partage et divulgation des données:</h3>
+        <h3 class="text-card-title" id="partage-et-divulgation-des-donnees">Partage et divulgation des données:</h3>
         <p class="text-min-body">
             <strong class="text-strong-word">Econ’home Energie</strong> sont les seuls destinataires des données.<br/>
             <strong class="text-strong-word">Econ’home Energie</strong> ne transmet les données de <strong class="text-strong-word">ses Utilisateurs</strong> à un tiers que:<br/>
@@ -198,18 +238,18 @@
             Lorsqu’un partenaire du réseau <strong class="text-strong-word">Econ’home Energie</strong> reçoit la requête d’une autorité judiciaire ou de toute autorité administrative habilitée par la loi sollicitant la communication de ces informations conformément aux dispositions législatives en vigueur.<br/>
             <strong class="text-strong-word">Econ’home Energie</strong> fait ses meilleurs efforts pour assurer la confidentialité et la sécurité des données personnelles collectées lors de leur transmission aux personnes sollicitées. 
         </p>
-        <h3 class="text-card-title">Mesures de sécurité:</h3>
+        <h3 class="text-card-title" id="mesures-de-securite">Mesures de sécurité:</h3>
         <p class="text-min-body">
             <strong class="text-strong-word">Econ’home Energie</strong> fait ses meilleurs efforts pour protéger les données personnelles <strong class="text-strong-word">des Utilisateurs</strong> contre les dommages, perte, détournement, intrusion, divulgation, altération ou destruction.<br/>
             Les systèmes informatiques d’ <strong class="text-strong-word">Econ’home Energie</strong> sont notamment dotés d’un système de cryptage des données et d’un dispositif de protection logiciel. Des procédures de sauvegarde physiquement électronique des données collectées sur le site sont mises en œuvre, conformément à la législation française en vigueur relative à la protection des données personnelles.<br/>
             Le personnel d’<strong class="text-strong-word">Econ’home Energie</strong> qui, du fait de sa fonction, auraient accès aux données <strong class="text-strong-word">des Utilisateurs</strong> sont tenus à la plus grande confidentialité à cet égard.<br/>
             Toutefois, <strong class="text-strong-word">Econ’home Energie</strong> ne maitrise pas les risques liés au fonctionnement d’Internet et attire l’attention <strong class="text-strong-word">des Utilisateurs</strong> sur l’existence d’éventuels risques en terme de pertes ponctuelles de données ou d’atteinte à la confidentialité des données transitant via ce réseau. Les informations proposées sur le site pourront être interrompues pour des cas de force majeure ou indépendants de la volonté d’<strong class="text-strong-word">Econ’home Energie</strong> ou de faits ne relevant pas de sa responsabilité. 
         </p>
-        <h3 class="text-card-title">Les délais de conservation des données:</h3>
+        <h3 class="text-card-title" id="delais-de-conservation-des-donnees">Les délais de conservation des données:</h3>
         <p class="text-min-body">
             Conformément à la loi Informatique et libertés et au <abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>, le réseau limite la conservation de vos données pendant une durée n’excédant pas celle nécessaire au regard des finalités pour lesquelles elles sont traitées. Cette durée peut être prorogée pour la durée nécessaire à la satisfaction de ses obligations légales, déontologiques, contractuelles et la défense de nos droits.
         </p>
-        <h3 class="text-card-title">Droits <strong class="text-strong-word">des Utilisateurs</strong> sur les données collectées:</h3>
+        <h3 class="text-card-title" id="droits-des-utilisateurs-sur-les-donnees">Droits <strong class="text-strong-word">des Utilisateurs</strong> sur les données collectées:</h3>
         <p class="text-min-body">
             <p class="text-min-body">
             Dans les limites et réserves portées par la loi, <strong class="text-strong-word"><strong class="text-strong-word">les Utilisateurs</strong></strong> disposent de droits sur les données qui les concernent(articles 15 à 20 du <abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>). Ces droits sont, dans la limite de leur application sur le site:
@@ -228,11 +268,11 @@
                 Pour exercer ces droits, <strong class="text-strong-word"><strong class="text-strong-word">les Utilisateurs</strong></strong> doivent justifier de leur identité et en faire la demande, par courriel … ou par courrier…
             </p>
         </p>
-        <h3 class="text-card-title">La Commission Nationale de l’Informatique et des Libertés(«<abbr title="La Commission Nationale de l’Informatique et des Libertés" class="text-strong-word">CNIL</abbr>»):</h3>
+        <h3 class="text-card-title" id="cnil">La Commission Nationale de l’Informatique et des Libertés(«<abbr title="La Commission Nationale de l’Informatique et des Libertés" class="text-strong-word">CNIL</abbr>»):</h3>
         <p class="text-min-body">
             Il est rappelé <strong class="text-strong-word">aux Utilisateurs</strong> qu’ils peuvent contacter la <abbr title="La Commission Nationale de l’Informatique et des Libertés" class="text-strong-word">CNIL</abbr> directement sur le site internet <a href="https://www.cnil.fr/fr/agir" class="text-hyperlink">https://www.cnil.fr/fr/agir</a> ou par courrier à l’adresse suivante: Commission Nationale de l’Informatique et des Libertés, 3 Place de Fontenoy – TSA 80715, 75334 PARIS CEDEX 07.
         </p>
-        <h3 class="text-card-title">Mise à jour de la politique de données personnelles:</h3>
+        <h3 class="text-card-title" id="mise-a-jour-de-la-politique-de-donnees">Mise à jour de la politique de données personnelles:</h3>
         <p class="text-min-body">
             <strong class="text-strong-word">Econ’home Energie</strong> est susceptible de modifier la Politique de Données Personnelles. Si le réseau souhaite utiliser vos données personnelles d’une manière différente de celle stipulée dans la Politique de Données Personnelles en vigueur au moment de la collecte, ces modifications seront notifiées de manière visible sur le site et <strong class="text-strong-word"><strong class="text-strong-word">les Utilisateurs</strong></strong> inscrits à la Newsletter seront également averti par mail.
         </p>
