--- a/about/index.html
+++ b/about/index.html
@@ -130,11 +130,11 @@
 
                 <p class="value-description text-small-body">
 
-                    Econ'home est une société située au sud-ouest de la France à Toulouse.</br>
-                Spécialisée dans les études énergétiques, elle propose depuis plusieurs années des solutions économiques et ergonomiques afin de réduire vos factures d’énergie et d’améliorer votre confort.</br>
+                    Est une société située au sud-ouest de la France à Toulouse.</br>
+                    Spécialisée dans les études énergétiques, elle propose depuis plusieurs années des solutions économiques et ergonomiques afin de réduire vos factures d’énergie et d’améliorer votre confort.</br>
             </br>Disposant des certifications RGE QualiPv et Qualipac, Econ’home Énergie vous offre la garantie de produire votre propre énergie verte en vous accompagnant le long de cette démarche pour vous livrer un projet abouti : installation, démarches administratives et garanties complètes.</br>
                     
-                    Passer à l’énergie renouvelable n’a jamais été aussi simple, le saviez-vous ? 
+             Passer à l’énergie renouvelable n’a jamais été aussi simple, le saviez-vous ? 
                 </p>
                 </blockquote>
             
