--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
 </nav>
 <header id="page-heading" class="page-section" tabindex="0">
     <div id="content-box-heading" class="content-box-page-section">
-        <h1 id="heading-title" class="text-page-title">La rénovation énergétique <br/>de votre foyer n'a jamais été aussi simple</h1>
+        <h1 id="heading-title" class="text-page-title">La rénovation énergétique <br/>N'a jamais été aussi simple</h1>
         <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à Meeco.</p>
         <a id="cta-heading-link" class="text-button button button-primary-special-private" href="./app/"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
-        <h2 id="values-intro-title" class="text-big-header section-title">Effectuer vos travaux d'économies d'énergie en toute simplicité par les ⭐ meilleurs artisans proches de chez vous.</h2>
+        <h2 id="values-intro-title" class="text-big-header section-title">Effectuez vos travaux d'économies d'énergie par les ⭐ meilleurs artisans proches de chez vous.</h2>
         <img id="values-intro-house" src="./images/visuals/maison.svg" alt="introduction illustration maison"/>
         <img id="values-intro-circle" src="./images/visuals/circle.svg" alt="introduction illustration cercle"/>
     </div>
@@ -144,12 +144,12 @@
             <li class="values-list-item">
                 <img src="./images/visuals/economie-illustration.svg" class="card-image" alt="économie-illustration"/>
                 <h3 class="values-list-item-title text-card-title">Maîtriser, pour réduire sa consommation énergétique</h3>
-                <p class="values-list-item-description text-card-body">Moins gâchée pour moins dépenser, avec la mise en place d’actions concrètes qui vont vous aider à maîtriser et réduire votre consommation d’énergie.</p>
+                <p class="values-list-item-description text-card-body">Moins gâcher pour moins dépenser, avec la mise en place d’actions concrètes qui vont vous aider à maîtriser et réduire votre consommation d’énergie.</p>
             </li>
             <li class="values-list-item">
                 <img src="./images/visuals/ecologie-illustration.svg" class="card-image" alt="écologie-illustration"/>
                 <h3 class="values-list-item-title text-card-title">Une habitation écologique est toujours économique </h3>
-                <p class="values-list-item-description text-card-body">En gardant votre confort, votre habitation devient beaucoup moins énergivore et votre empreinte écologique diminue avec zéro pollution.</p>
+                <p class="values-list-item-description text-card-body">En gardant votre confort, votre habitation devient beaucoup moins énergivore et votre empreinte écologique diminue et ceci sans pollution pour l’environnement.</p>
             </li>
             <li class="values-list-item">
                 <img src="./images/visuals/confort-illustration.svg" class="card-image" alt="confort-illustration"/>
@@ -161,7 +161,7 @@
 </section>
 <section id="services-section" class="page-section" tabindex="0">
     <div id="content-box-services" class="content-box-page-section">
-        <h2 id="services-section-title" class="text-big-header section-title">Nous vous proposons des travaux de renovation énergetique de qualité.</h2>
+        <h2 id="services-section-title" class="text-big-header section-title">Nous vous proposons des travaux de rénovation énergétique de qualités.</h2>
         <ul id="services-section-list">
             <li class="services-section-list-item">
                 <img src="./images/visuals/isolation-illustration.svg" class="card-image" alt="isolation-illustration"/>
@@ -172,7 +172,7 @@
             <li class="services-section-list-item">
                 <img src="./images/visuals/chauffage-illustration.svg" class="card-image" alt="chauffage-illustration"/>
                 <h3 class="services-section-list-item-title text-card-title">Changer mon chauffage</h3>
-                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <p class="services-section-list-item-description text-card-body">Je veux un système de chauffage performant et économique.</p>
                 <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
@@ -191,10 +191,10 @@
             <ul id="faq-questions-list">
                 <li id="faq-question-1" class="text-clickable faq-question faq-question-active" aria-label="Question 1" onclick="show_answer(1)" onkeydown="show_answer(1)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Pourquoi est-il important de bien isoler sa maison ?</span></li>
                 <li id="faq-answer-1" class="text-small-body faq-answer faq-answer-active"><b>Reponse:</b><br/>L'isolation thermique de votre maison permet de réaliser d'importantes économies sur votre facture d'énergie, été comme hiver. Mais l'isolation thermique offre également l'avantage d'améliorer le confort thermique de l'intérieur de votre habitation.
-                    Une maison mal isolée peut subir des pertes de chaleur. Par exemple, avoir des combles mal isolés peut avoir comme conséquence 30% de pertes de chaleur.
+                    Une maison mal isolée peut subir des pertes de chaleur. Avoir des combles mal isolés par exemple peut avoir pour conséquence 30% de pertes de chaleur.
                     </li>
-                <li id="faq-question-2" class="text-clickable faq-question" aria-label="Question 2" onclick="show_answer(2)" onkeydown="show_answer(2)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Une Pompe à Chaleur air-eau, qu'est ce que c'est ?</span></li>
-                <li id="faq-answer-2" class="text-small-body faq-answer"><b>Reponse:</b><br/>La pompe à chaleur air-eau utilise l’air comme source d’énergie et convient aussi bien pour le chauffage que pour la production d’eau chaude. La PAC () Air-eau transforme les calories captées dans l’air en chaleur. Cette chaleur permet de chauffer de l’eau, qui circule ensuite dans les radiateurs ou à travers un plancher chauffant. C’est un système de chauffage écologique qui respecte l'environnement. On estime sa durée de vie d’environ 16 ans.</li>
+                <li id="faq-question-2" class="text-clickable faq-question" aria-label="Question 2" onclick="show_answer(2)" onkeydown="show_answer(2)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Une Pompe à Chaleur air-eau, c’est quoi ?</span></li>
+                <li id="faq-answer-2" class="text-small-body faq-answer"><b>Reponse:</b><br/>La pompe à chaleur air-eau utilise l’air comme source d’énergie et convient aussi bien pour le chauffage que pour la production d’eau chaude. La PAC Air-eau transforme les calories captées dans l’air en chaleur. Cette chaleur permet de chauffer de l’eau, qui circule ensuite dans les radiateurs ou à travers un plancher chauffant, c’est un système de chauffage écologique qui respecte l’environnement, on estime sa durée de vie à 16 ans environ.</li>
                 <li id="faq-question-3" class="text-clickable faq-question" aria-label="Question 3" onclick="show_answer(3)" onkeydown="show_answer(3)" tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Puis-je bénéficier d’aides pour ma rénovation en 2021 ?</span></li>
                 <li id="faq-answer-3" class="text-small-body faq-answer"><b>Reponse:</b><br/>Effectivement, sous certaines conditions de ressources et techniques, vous pouvez prétendre à des aides pour financer vos travaux, par exemple :</br>
                     ● MaPrime Rénov 2021 </br>
@@ -207,15 +207,15 @@
                     </li>
                 <li id="faq-question-4" class="text-clickable faq-question" aria-label="Question 4" onclick="show_answer(4)" onkeydown="show_answer(4)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">Qu’est-ce qu’un artisan certifié RGE ?</span></li>
                 <li id="faq-answer-4" class="text-small-body faq-answer"><b>Reponse:</b><br/>Le label RGE « Reconnu Garant de l'Environnement » est un label de qualité délivré à une 
-                    Entreprise qui remplit certains critères dans la réalisation de travaux d'économie d'énergie. 
+                    entreprise qui remplit certains critères dans la réalisation de travaux d'économie d'énergie. 
                     Pour l’obtention de primes pour vos travaux de rénovation énergétique, vous devrez faire appel à des artisans certifiés RGE (Reconnu Garant de l’Environnement). 
                     Cette certification RGE n’est évidemment pas valable à vie. 
-                    Les artisans bénéficient du label pendant quatre ans puis sont soumis à une évaluation chaque année
+                    Les artisans bénéficient du label pendant quatre ans puis sont soumis à une évaluation chaque année.
                     ss</li>
                 <li id="faq-question-5" class="text-clickable faq-question" aria-label="Question 5" onclick="show_answer(5)" onkeydown="show_answer(5)"tabindex="0"><span class="faq-question-arrow"></span><span class="question-body">L'autoconsommation Photovoltaïque quel intérêt ? </span></li>
-                <li id="faq-answer-5" class="text-small-body faq-answer"><b>Reponse:</b><br/>L'autoconsommation photovoltaïque s'inscrit dans une démarche respectueuse de l'environnement, elle contribue à la préservation des ressources naturelles. 
-                    Elle fait actuellement partie de l’un des meilleurs moyens économiques pour diminuer la facture électrique en profitant de l’énergie produite gratuitement. 
-                    Cependant il est important de regrouper plusieurs conditions nécessaires à un rendement optimal, une étude de qualité doit être effectuée avant pour déterminer la faisabilité du projet, pour ainsi obtenir une estimation précise de la production électrique pouvant être consommée.
+                <li id="faq-answer-5" class="text-small-body faq-answer"><b>Reponse:</b><br/>L’autoconsommation photovoltaïque s’inscrit dans une démarche respectueuse de l’environnement, elle contribue à la préservation des ressources naturelles.
+                    Elle fait actuellement partie de l’un des meilleurs moyens économiques pour diminuer la facture électrique tout en profitant de l’énergie produite gratuitement.
+                    Cependant, il est important de regrouper plusieurs conditions nécessaires à un rendement optimal : une étude de qualité doit être effectuée pour déterminer la faisabilité du projet et ainsi obtenir une estimation précise de la production électrique pouvant être consommée.                    
                     </li>
             </ul>
         </div>
@@ -268,7 +268,7 @@
 <section id="newsletter-section" class="page-section" tabindex="0">
     <div id="content-box-newsletter" class="content-box-page-section">
         <h2 id="newsletter-title" class="text-small-header section-title">Restez informé des nouveautés Meeco.</h2>
-        <p id="newsletter-description" class="text-small-body">Inscrivez-vous à notre Newsletter et soyez le premier informé de toutes nos actualités et nouveautés.</p>
+        <p id="newsletter-description" class="text-small-body">Inscrivez-vous à notre Newsletter et soyez les premiers informés de toutes nos actualités et nouveautés.</p>
         <form class="input-email-form" id="newsletter-form" action="">
             <div id="email-input-box" class="input-box">
                 <label id="newsletter-email-input-label" for="newsletter-email-input" class="text-label input-label">Email</label>
