--- a/cgu/index.html
+++ b/cgu/index.html
@@ -16,6 +16,16 @@
     <link rel="stylesheet" href="../css/sections.css">
     <link rel="stylesheet" href="../css/sections(1100).css">
     <link rel="stylesheet" href="../css/cgu-main.css">
+    <script>
+        window.intercomSettings = {
+          app_id: "k61v5nae"
+        };
+      </script>
+      
+      <script>
+      // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/k61v5nae'
+      (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/k61v5nae';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+      </script>
 </head>
 <body onscroll="scrollfunction();" id="page-cgu" class="page">
 <nav id="navigation-bar" class="navigation-bar">
