--- a/app/app-26.html
+++ b/app/app-26.html
@@ -5,10 +5,11 @@
                 <label id="revenues-input-label" for="revenues-input" class="text-label input-label input-label-required">Revenues fiscaux<span class="required-asterisk">*</span></label>
                 <select name="revenues-input" id="revenues-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;Selectionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="inferieur-a">&nbsp;&nbsp;inférieurs à A</option>
-                    <option class="input-drop-down-choice text-clickable" value="entre-a-b">&nbsp;&nbsp;entre A et B</option>
-                    <option class="input-drop-down-choice text-clickable" value="entre-b-c">&nbsp;&nbsp;entre B et C</option>
-                    <option class="input-drop-down-choice text-clickable" value="superieur-c">&nbsp;&nbsp;supérieurs à C</option>
+                    <option class="input-drop-down-choice text-clickable" value="inferieur-19074€">&nbsp;&nbsp;inférieurs à 19074€</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-19074€-27896€">&nbsp;&nbsp;entre 19074€ et 27896€</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-27896€-33547€">&nbsp;&nbsp;entre 27896€ et 33547€</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-33547€-39192€">&nbsp;&nbsp;entre 33547€ et 39192€</option>
+                    <option class="input-drop-down-choice text-clickable" value="superieur-44860€">&nbsp;&nbsp;supérieurs à 44860€</option>
                 </select>
             </div>
         </form>
