--- a/app/app-27.html
+++ b/app/app-27.html
@@ -1,15 +1,11 @@
 <div id="app-27" class="input-choice input-drop-down-choice" name="eligibilite_code_postal" data-title="Veuillez choisir votre code postal" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="85" data-evident_next_page="28">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="code-postal-form" action="" >
-            <div class="input-box input-drop-down-box">
+           
+            <div class="input-box input-code-postal-box">
                 <label id="code-postal-input-label" for="code-postal-input" class="text-label input-label input-label-required">Code postal<span class="required-asterisk">*</span></label>
-                <select name="code-postal-input" id="code-postal-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
-                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;Selectionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="0001">&nbsp;&nbsp;0001</option>
-                    <option class="input-drop-down-choice text-clickable" value="0002">&nbsp;&nbsp;0002</option>
-                    <option class="input-drop-down-choice text-clickable" value="0003">&nbsp;&nbsp;0003</option>
-                    <option class="input-drop-down-choice text-clickable" value="0004">&nbsp;&nbsp;0004</option>
-                </select>
+                <input type="text" name="code-postal" id="code-postal-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
+                
             </div>
         </form>
     </ul>
