phone number change

--- a/contact/index.html
+++ b/contact/index.html
@@ -164,7 +164,7 @@
             <h2 id="info-title" class="text-small-header section-title">Nos coordonnées</h2>
             <address id="contact-info" class="text-min-body">
                 <span class="contact-info-label">N° de téléphone:</span>
-                <a href="tel:+33612345678" class="link">06 12 34 56 78</a>
+                <a href="tel:+33188849997" class="link">01 88 84 99 97</a>
                 <br/>
                 <span class="contact-info-label">Email:</span>
                 <a href="mailto:contact@meeco.fr" class="link">contact@meeco.fr</a>
@@ -193,7 +193,7 @@
         <div id="floating-phone-card-image"></div>
         <span id="floating-phone-card-title">Service client Meeco</span>
         <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
-        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+        <a id="floating-phone-card-number" href="tel:+33188849997">01 88 84 99 97</a>
     </div>
     <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
 </div>
