--- a/isolation/index.html
+++ b/isolation/index.html
@@ -165,7 +165,7 @@
         <div id="floating-phone-card-image"></div>
         <span id="floating-phone-card-title">Service client Meeco</span>
         <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
-        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+        <a id="floating-phone-card-number" href="tel:+33188849997">01 88 84 99 97</a>
     </div>
     <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
 </div>
