--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <li><a href="./cgu/" class="important-link text-footer" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
             <li><a href="./contact/" class="important-link text-footer" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
-        <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
+        <small id="copyright-notice" class="text-footer">Copyright &copy;2021</small>
     </div>
 </footer>
 <div id="floating-phone">
@@ -306,7 +306,7 @@
         <div id="floating-phone-card-image"></div>
         <span id="floating-phone-card-title">Service client Meeco</span>
         <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
-        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+        <a id="floating-phone-card-number" href="tel:+33188849997">01 88 84 99 97</a>
     </div>
     <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
 </div>
